tests/compile_fail/ctx_copy.cc
// SPDX-License-Identifier: MIT
#include <umitest/test.hh>

void test() {
    umi::test::Suite s("x");
    s.run("x", [](umi::test::TestContext& ctx) { auto copy = ctx; });
}
